force-app/main/default/objects/Case_Durations__c/Case_Durations__c.object-meta.xml
<CustomObject>
    <description>Used to Tracked Specific Metrics on the Case</description>
    <label>Case Durations</label>
    <nameField>
        <label>Case Duration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Durations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>