force-app/main/default/objects/Case_Durations__c/fields/Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Business_Days__c</fullName>
    <formula>Business_Hours__c /24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>