force-app/main/default/objects/Case_Durations__c/fields/Business_Week__c.field-meta.xml
<CustomField>
    <fullName>Business_Week__c</fullName>
    <formula>Business_Days__c /7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>