force-app/main/default/objects/Case_Durations__c/fields/Calculated_Business_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Business_Seconds__c</fullName>
    <label>Calculated Business Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>