force-app/main/default/objects/Case_Durations__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <description>Start Time of Tracking</description>
    <inlineHelpText>Start Time of Tracking</inlineHelpText>
    <label>From</label>
    <type>DateTime</type>
</CustomField>