force-app/main/default/objects/Case_Durations__c/fields/IsQueueToUser__c.field-meta.xml
<CustomField>
    <fullName>IsQueueToUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsQueueToUser</label>
    <type>Checkbox</type>
</CustomField>