force-app/main/default/objects/Case_Durations__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Durations</relationshipLabel>
    <relationshipName>Case_Durations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>