force-app/main/default/objects/Case_Durations__c/fields/Previous_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Value__c</fullName>
    <label>Previous Value</label>
    <type>TextArea</type>
</CustomField>