force-app/main/default/objects/Case_Durations__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>From Status</label>
    <type>TextArea</type>
</CustomField>