force-app/main/default/objects/Case_Durations__c/fields/To_Status__c.field-meta.xml
<CustomField>
    <fullName>To_Status__c</fullName>
    <label>To Status</label>
    <type>TextArea</type>
</CustomField>