force-app/main/default/objects/Case_Durations__c/fields/Total_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Days__c</fullName>
    <formula>Total_Hours__c /24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>