force-app/main/default/objects/Case_Durations__c/fields/Total_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Minutes__c</fullName>
    <formula>Calculated_Seconds__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>