force-app/main/default/objects/Case_Durations__c/fields/Total_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Total_Weeks__c</fullName>
    <formula>Total_Days__c /7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weeks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>