force-app/main/default/objects/Case_Durations__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queue to User Change</fullName>
            </value>
            <value>
                <fullName>Owner Change</fullName>
            </value>
            <value>
                <fullName>Status Change</fullName>
            </value>
            <value>
                <fullName>First Email Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>